@@ -50,6 +50,6 @@
 #include <Rcpp/macros/traits.h>
 #include <Rcpp/macros/config.hpp>
 #include <Rcpp/macros/cat.hpp>
-
+#include <Rcpp/macros/module.h>
 
 #endif
